# STM32-FUOTA

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: gen-server.py
src/LinkerScripts/: STM32F107VCTx_FLASH_APPLICATION.ld  STM32F107VCTx_FLASH_BOOTLOADER.ld  STM32F107VCTx_FLASH_STANDALONE.ld
src/UpdateGenerator/: Noekeon.py  gen-server.py
src/app/application/: CMakeLists.txt  main.c
src/app/bootLoader/: CMakeLists.txt  main.c
src/app/bootloader/: CMakeLists.txt  main.c
src/mcu/stm32f107/: GPIO.c  USART.c  bkpreg.c  board.c  crc.c  devId.c  eeprom.c  flash.c  timer.c
src/peripheral/: GPIO.h  USART.h  bkpreg.h  devId.h  eeprom.h  flash.h
src/shared/: ESP-AT.c  ESP-AT.h  board.h  bootOptions.h  config.h  crc.h  debug.h  delay.c  delay.h  fifo.c  fifo.h  fuota.c  fuota.h  newstring.c  newstring.h  string.c  string.h  timer.h  util.c  util.h
